03-kubernetes/raw/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud
  labels:
    name: cloud
