03-kubernetes/raw/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-ingress
  namespace: cloud
    #annotations:
    #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - #host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloud-echo-service
            port:
              number: 80
